package edu.hitsz.application;

public class GameNormal extends Game {
    public GameNormal(String musicMode, String userName) {
        super(musicMode, userName);
        this.gameLevel = 1;
    }


}
